[workspace]
members = [
    "radui",
    "examples/parquet_viewer"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/avantgardnerio/radui"
version = "0.1.0"

[workspace.dependencies]
radui = { path = "radui" }
yaserde = "0.7.1"

