[workspace]
members = [
    "radui",
    "examples/parquet_viewer"
, "rad-xsd-parser", "generator"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/avantgardnerio/radui"
version = "0.1.0"
description = "A rapid application development graphical user interface"
homepage = "https://github.com/avantgardnerio/radui"

[workspace.dependencies]
radui = { path = "radui" }
yaserde = "0.7.1"
winit = "0.28.1"
uuid = { version = "1.8.0", features = ["v4"] }
