[package]
name = "rad-xsd-parser"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
convert_case = "0.6.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { workspace = true }
