[package]
name = "radui"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
glutin = "0.30.0"
glutin-winit = "0.3.0"
winit = "0.28.1"
raw-window-handle = "0.5.0"
femtovg = "0.9.1"
yaserde = { workspace = true }
yaserde_derive = "0.7.1"
xsd-types = {git = "https://github.com/avantgardnerio/xsd-parser-rs.git", rev = "c5099f9e865cdbb916465a62f16f6eb2013f1c06"}
xsd-parser = {git = "https://github.com/avantgardnerio/xsd-parser-rs.git", rev = "c5099f9e865cdbb916465a62f16f6eb2013f1c06"}
xsd-macro-utils = {git = "https://github.com/avantgardnerio/xsd-parser-rs.git", rev = "c5099f9e865cdbb916465a62f16f6eb2013f1c06"}
xml-rs = "0.8"
itertools = "0.12.1"
resource = "0.5.0"
as-any = "0.3.1"

[build-dependencies]
xsd-parser = {git = "https://github.com/avantgardnerio/xsd-parser-rs.git", rev = "c5099f9e865cdbb916465a62f16f6eb2013f1c06"}
